--- a/src/_layouts/default.liquid
+++ b/src/_layouts/default.liquid
@@ -19,6 +19,8 @@
 	</main>
 	{% include 'partials/footer.html' %}
 </div>
-<div id="tag-label"></div>
+<div id="tag-label">
+	<<span class="tag-name"></span>>
+</div>
 </body>
 </html>
