[cleanup] remove old files

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -456,8 +456,11 @@ time {
   content: none;
 }
 
+dt {
+  --wght: 650;
+}
+
 .dropdown-title {
-  color: var(--secondcolor);
   margin: 2em 0 0;
   border-bottom: 1px solid;
 }
@@ -467,6 +470,7 @@ time {
 
 .unit {
   grid-column: 2/4;
+  --wdth: 10;
 }
 
 .phase {
@@ -567,7 +571,7 @@ th {
   position: absolute;
   --wght: 800;
   box-shadow: inset 2px 2px 4px var(--thirdcolor);
-  padding: 8px;
+  padding: 8px 8px 0px;
   line-height: 1;
   z-index: 100;
   color: var(--thirdcolor);
