[content] fix typos

--- a/src/_layouts/partials/week.liquid
+++ b/src/_layouts/partials/week.liquid
@@ -47,7 +47,7 @@
 		</div>
 
 		{% if w.data.reading %}
-		<div class="row reading">
+		<div class="row">
 			<h4>Reading</h4>
 			<div class="item">
 				<ul>
