--- a/src/_layouts/partials/week.liquid
+++ b/src/_layouts/partials/week.liquid
@@ -26,7 +26,7 @@
 
 		{% if w.data.hw %}
 		<div class="row class">
-			<h4>HW</h4>
+			<h4>Assignment</h4>
 			{% for h in w.data.hw %}
 			<div class="day">
 				{{h | markdown}}
