--- a/src/projects/index.liquid
+++ b/src/projects/index.liquid
@@ -6,22 +6,29 @@ eleventyExlcudeFromCollections: true
 
 <div class="projects">
 	<h1>{{ title }}</h1>
-	<h2>Process</h2>
+
+	<p>With each project, will use the following process in order to experiment, make intentional decisions, and effectively execute on our ideas.</p>
+
 	<h3>1. Introduction </h3>
 	<p>
-	Each unit will kick-off with an overview of the project and any in-class exercises to get started. In addition, required readings will be assigned to further ground each lecture. Students will provide discussion questions based on the lecture and readings prior to the start of next class. 
+	Each unit will kick-off with an overview of the project and an in-class exercises to get started. In addition, required readings will be assigned to further ground each lecture. Students will provide discussion questions based on the lecture and readings prior to the start of next class. 
 	</p>
 	<h3>2. Ideas</h3>
 	<p>
-	Students will bring in 3 different ideas at the start of each project. This can be in the form of a presentation or Miro board of sketches, lo-fi wireframes, and references for interaction, mood, or aesthetics. These must be 3 distinctively different narrative/visual ideas.
+	We will bring in 3 different ideas at the start of each project. This can be in the form of a presentation or Miro board of sketches, lo-fi wireframes, and references for interaction, mood, or aesthetics. These must be 3 distinctively different narrative/visual ideas.
 	</p>
 	<h3>3. Iteration</h3>
 	<p>
-	Students will create visual mockups of their selected idea in Figma. The goal in creating a mockup is to make design decisions without the burden of coding. This means that every visual element has to exist in its place with good reason. Include key screens to convey what the experience will be like in desktop and mobile versions. 
+	We will create visual mockups of their selected idea in Figma. The goal in creating a mockup is to make design decisions without the burden of coding. This means that every visual element has to exist in its place with good reason. Include key screens to convey what the experience will be like in desktop and mobile versions. 
 	</p>
 	<h3>4. Implementation</h3>
 	<p>
-	Students will build their projects in code. Studio instructors will support the conceptual development of their websites. Lab instructors and CD Tutors will help troubleshoot the technical code. Final websites must be posted live to GitHub.
+	We will build their projects in code. Studio instructors will support the conceptual development of their websites. Lab instructors and CD Tutors will help troubleshoot the technical code. Final websites must be posted live to GitHub.
+	</p>
+
+	<br>
+	<p>
+		See the <a href="/schedule/">Schedule</a> for further details on the timeline for each project.
 	</p>
 
 	<section class="link-list">
