--- a/src/_layouts/partials/header.liquid
+++ b/src/_layouts/partials/header.liquid
@@ -2,12 +2,12 @@
 	<nav id="main-nav">
 		<div class="top-nav">
 			<a href="/" class="home">Core 2 Interaction</a>
-			<a href="/syllabus/">syllabus</a>
-			<a href="/schedule/">schedule</a>
-			<a href="/projects/">projects</a>
-			<a href="/readings/">readings</a>
-			<a href="/resources/">resources</a>
-			<a href="/colophon/">colophon</a>
+			<a href="/syllabus/">Syllabus</a>
+			<a href="/schedule/">Schedule</a>
+			<a href="/projects/">Projects</a>
+			<a href="/readings/">Readings</a>
+			<a href="/resources/">Resources</a>
+			<a href="/colophon/">Colophon</a>
 		</div>
 		
 		<div id="menu-icon">
@@ -17,17 +17,18 @@
 		</div>
 		<div class="nav-links">			
 			<a href="/">Core 2 Interaction</a>
-			<a href="/syllabus/">syllabus</a>
-			<a href="/schedule/">schedule</a>
-			<a href="/projects/">projects</a>
-			<a href="/readings/">readings</a>
-			<a href="/resources/">resources</a>
-			<a href="/colophon/">colophon</a>
+			<a href="/syllabus/">Syllabus</a>
+			<a href="/schedule/">Schedule</a>
+			<a href="/projects/">Projects</a>
+			<a href="/readings/">Readings</a>
+			<a href="/resources/">Resources</a>
+			<a href="/colophon/">Colophon</a>
 			
 			<br>
 			<br>
 			<div class="meta">Quick links</div>
 			<a href="https://www.are.na/core-2-interaction-sp23" target="_blank">are.na</a>
+			<a href="https://docs.google.com/spreadsheets/d/1rBKuPsYTBMxVNHjSbYHmnmO-pFcVh0YOJWoF0vkWlUQ/edit#gid=0" target="_blank">Reading signups</a>
 			<a href="https://core2interact-mra3434.slack.com" target="_blank">Slack</a>
 			<a href="https://vimeo.com/user/11664633/folder/3213480" target="_blank">CD Videos</a>
 			<a href="https://drive.google.com/drive/folders/12A5-6IGCl98XmSGr3smLHJgyabwMnLvU?usp=sharing" target="_blank">Google Drive</a>	
