--- a/src/readings/index.liquid
+++ b/src/readings/index.liquid
@@ -7,12 +7,16 @@ eleventyExcludeFromCollections: true
 
 <div class="readings">
 	<p>
-		Readings will be dispersed throughout the semester to inform and contextualize our work with each project. Be prepared to respond, raise questions, and discuss the text during class.
+		Readings will be dispersed throughout the semester to inform and contextualize our work with each project. Be prepared to respond, raise questions, and discuss the text during class by posting a comment or question on the relevant Slack channel.
+	</p>
+	<p>
+		Each student will be responsible for being a lead in the reading discussion: <a href="https://docs.google.com/spreadsheets/d/1rBKuPsYTBMxVNHjSbYHmnmO-pFcVh0YOJWoF0vkWlUQ/edit#gid=0">Sign Up here</a>. This involves kicking-off the discussion with a brief summary of the reading, preparing at least four discussion questions, and readiness to respond to your peers’ responses.
 	</p>
 	<section class="reading-list">
 	{% assign readings = collections.reading %}
 	{% for r in readings %}
 		<a href="{{r.data.link}}" target="_blank" class="reading">
+			<div class="year"> {{r.date | yearformat }}</div>
 			<div class="title"> {{r.data.title}}</div>
 			<div class="author">{{r.data.author}}</div>
 		</a>
