--- a/src/_layouts/home.liquid
+++ b/src/_layouts/home.liquid
@@ -10,10 +10,10 @@ layout: default.liquid
 	{% endfor %}
 </section>
 
-<!-- <section>
+<section>
 	<div class="students link-list">
 		{% for s in students %}
-			<a href="{{s.link}}" target="_blank" class="link-button">{{s.name}}</a>
+			<a href="{{s.url}}" target="_blank" class="link-button">{{s.name}}</a>
 		{% endfor %}
 	</div>
-</section> -->
+</section>
