--- a/src/_layouts/partials/footer.html
+++ b/src/_layouts/partials/footer.html
@@ -1,3 +1,3 @@
 <footer>
-	Core 2 Interaction Studio Section F — Tuesdays and Thursdays 7:00pm–9:40pm
+	Core 2 Interaction Section F — Studio: Tuesdays and Thursdays 7:00pm–9:40pm, Lab: Fridays 9:00am–11:40am
 </footer>
