--- a/src/projects/index.liquid
+++ b/src/projects/index.liquid
@@ -15,7 +15,7 @@ eleventyExlcudeFromCollections: true
 	</p>
 	<h3>2. Ideas</h3>
 	<p>
-	We will bring in 3 different ideas at the start of each project. This can be in the form of a presentation or Miro board of sketches, lo-fi wireframes, and references for interaction, mood, or aesthetics. These must be 3 distinctively different narrative/visual ideas.
+	We will bring in 3 different ideas at the start of each project. This can be in the form of a Google slide presentation or Figma boards, lo-fi wireframes, and references for interaction, mood, or aesthetics. These must be 3 distinctively different narrative/visual ideas. Be prepared to discuss what you are prioritizing with each approach.
 	</p>
 	<h3>3. Iteration</h3>
 	<p>
