--- a/src/_layouts/partials/header.liquid
+++ b/src/_layouts/partials/header.liquid
@@ -5,9 +5,11 @@
 			<a href="/syllabus/">Syllabus</a>
 			<a href="/schedule/">Schedule</a>
 			<a href="/projects/">Projects</a>
+			<a href="/activities/">Activities</a>
 			<a href="/readings/">Readings</a>
 			<a href="/resources/">Resources</a>
 			<a href="/colophon/">Colophon</a>
+			<a href="https://until.notion.site/until/Core-2-Interaction-Lab-Fall-2023-F-bf4b5d07ec664be388008e4bf043a87e">Lab</a>
 		</div>
 		
 		<div id="menu-icon">
@@ -20,15 +22,18 @@
 			<a href="/syllabus/">Syllabus</a>
 			<a href="/schedule/">Schedule</a>
 			<a href="/projects/">Projects</a>
-			<a href="/readings/">Readings</a>
+			<a href="/activities/">Activities</a>
+			<a href="/readings/">Readings</a>			
 			<a href="/resources/">Resources</a>
 			<a href="/colophon/">Colophon</a>
+			<a href="https://until.notion.site/until/Core-2-Interaction-Lab-Fall-2023-F-bf4b5d07ec664be388008e4bf043a87e">Lab</a>
 			
 			<br>
 			<br>
 			<div class="meta">Quick links</div>
 			<a href="https://www.are.na/core-2-interaction-sp23" target="_blank">are.na</a>
 			<a href="https://docs.google.com/spreadsheets/d/1rBKuPsYTBMxVNHjSbYHmnmO-pFcVh0YOJWoF0vkWlUQ/edit#gid=0" target="_blank">Reading signups</a>
+			<a href="https://github.com/marieotsuka/interaction-sp23demos" target="_blank">Demos Repo</a>			
 			<a href="https://core2interact-mra3434.slack.com" target="_blank">Slack</a>
 			<a href="https://vimeo.com/user/11664633/folder/3213480" target="_blank">CD Videos</a>
 			<a href="https://drive.google.com/drive/folders/12A5-6IGCl98XmSGr3smLHJgyabwMnLvU?usp=sharing" target="_blank">Google Drive</a>	
